--- a/system/supervisor/frontend.conf
+++ b/system/supervisor/frontend.conf
@@ -1,6 +1,7 @@
-[program:test]
+[program:frontend]
 directory="project directory"
 command=npm start
+autostart = true
 autorestart=true 
 stderr_logfile=/var/log/test.err.log
 stdout_logfile=/var/log/test.out.log
